Sat Oct 24 12:47:47 2015  Martin Duerst  <duerst@it.aoyama.ac.jp>

	* vm_insnhelper.c: improved error message for "wrong number
	  of arguments", distinguishing given and expected argument
	  numbers clearly. [Feature #9025]

Sat Oct 24 11:57:59 2015  Shugo Maeda  <shugo@ruby-lang.org>

	* vm_insnhelper.c: remove the typedef redeclaration of
	  vm_call_handler.

Sat Oct 24 07:29:12 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/forwardable.rb (def_instance_delegator, def_single_delegator):
	  match backtraces against ::Forwardable in case the target class
	  is a subclass of BasicObject and does not include Kernel.
	  [ruby-core:71176] [Bug #11616]

Sat Oct 24 04:10:13 2015  Koichi Sasada  <ko1@atdot.net>

	* iseq.c (make_compile_option_value): include frozen_string_literal*
	  in a made option value.

	* vm_opts.h: forgot to add OPT_FROZEN_STRING_LITERAL_DEBUG
	  at last commit.

Sat Oct 24 03:58:02 2015  Koichi Sasada  <ko1@atdot.net>

	* ruby.c: introduce --enable-frozen-string-literal-debug option.
	  If this option is enabled, the modify error will be:
	    can't modify frozen String (RuntimeError) =>
	    can't modify frozen String, created at test.rb:3 (RuntimeError)

	* iseq.h: add compile option frozen_string_literal_debug.

	* compile.c: catch up this fix.

	* error.c (rb_error_frozen): ditto.

	* iseq.c (set_compile_option_from_hash): ditto.

	* test/ruby/test_rubyoptions.rb: add a test for this fix.

Sat Oct 24 02:02:24 2015  Koichi Sasada  <ko1@atdot.net>

	* vm_insnhelper.c: introduce new call handler for simple ISeqs.

	  vm_call_iseq_setup_normal_0start() is simple, however it has
	  some loops/conditions depends on ISeq::param.size and
	  ISeq::local_size (in vm_push_frame(), inlined into this function).

	  There are many simple methods which has a few parameters and local
	  variables. So that this patch introduces several special functions
	  generated in vm_call_iseq_optimized.inc by
	  tool/mk_call_iseq_optimized.rb.
